ingress/deployment_v3.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: my-api-v3
spec:
  replicas: 2
  template:
    metadata:
      labels: # labelに下記の値を設定
        app: my-api
        version: v3
    spec:
      containers:
      - name: my-api
        image: tinjyuu/my-api:v3
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: my-api-v3
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  selector:
    app: my-api
    version: v3
