ingress/service-production-develop.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-production
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  selector:
    app: my-api
    version: v2
---
apiVersion: v1
kind: Service
metadata:
  name: service-develop
spec:
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  selector:
    app: nginx-develop
