ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
#  annotations:
#    kubernetes.io/ingress.global-static-ip-name: "35.221.130.56"
spec:
  backend:
    serviceName: my-service
    servicePort: 80
